--- a/public/test.html
+++ b/public/test.html
@@ -92,7 +92,7 @@
 					const c = canvas.getContext("2d");
 
 					// size of canvas
-					const imgSize = 512;
+					const imgSize = 1240;
 
 					canvas.width = imgSize;
 					canvas.height = imgSize;
@@ -350,7 +350,7 @@
 								<div class="test__img">
 									<img src="assets/images/landing/intro/3-xl.jpg" alt="">
 								</div>
-								<svg class="icon icon-social-youtube" width="20" height="20" role="presentation"><use href="/assets/images/icons.svg#social-youtube" xlink:href="/assets/images/icons.svg#social-youtube"></use></svg>
+								<svg class="icon icon-social-youtube" width="20" height="20" role="presentation"><use href="assets/images/icons.svg#social-youtube" xlink:href="assets/images/icons.svg#social-youtube"></use></svg>
 							</div>
 						</div>
 					</div>
@@ -365,7 +365,7 @@
 								<div class="test__img">
 									<img src="assets/images/landing/intro/3-xl.jpg" alt="">
 								</div>
-								<svg class="icon icon-social-youtube" width="20" height="20" role="presentation"><use href="/assets/images/icons.svg#social-youtube" xlink:href="/assets/images/icons.svg#social-youtube"></use></svg>
+								<svg class="icon icon-social-youtube" width="20" height="20" role="presentation"><use href="assets/images/icons.svg#social-youtube" xlink:href="assets/images/icons.svg#social-youtube"></use></svg>
 							</div>
 							<div class="col-md-6 offset-md-1">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a justo aliquet, vulputate ligula at, placerat est. Aenean in orci accumsan, commodo ante a, sodales nibh. Phasellus venenatis eu ipsum non lobortis. Donec vehicula enim a venenatis lacinia. Maecenas et pharetra diam, et imperdiet ante. </p>
@@ -388,7 +388,7 @@
 								<div class="test__img">
 									<img src="assets/images/landing/intro/3-xl.jpg" alt="">
 								</div>
-								<svg class="icon icon-social-youtube" width="20" height="20" role="presentation"><use href="/assets/images/icons.svg#social-youtube" xlink:href="/assets/images/icons.svg#social-youtube"></use></svg>
+								<svg class="icon icon-social-youtube" width="20" height="20" role="presentation"><use href="assets/images/icons.svg#social-youtube" xlink:href="assets/images/icons.svg#social-youtube"></use></svg>
 							</div>
 						</div>
 					</div>
@@ -403,7 +403,7 @@
 								<div class="test__img">
 									<img src="assets/images/landing/intro/3-xl.jpg" alt="">
 								</div>
-								<svg class="icon icon-social-youtube" width="20" height="20" role="presentation"><use href="/assets/images/icons.svg#social-youtube" xlink:href="/assets/images/icons.svg#social-youtube"></use></svg>
+								<svg class="icon icon-social-youtube" width="20" height="20" role="presentation"><use href="assets/images/icons.svg#social-youtube" xlink:href="assets/images/icons.svg#social-youtube"></use></svg>
 							</div>
 							<div class="col-md-6 offset-md-1">
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a justo aliquet, vulputate ligula at, placerat est. Aenean in orci accumsan, commodo ante a, sodales nibh. Phasellus venenatis eu ipsum non lobortis. Donec vehicula enim a venenatis lacinia. Maecenas et pharetra diam, et imperdiet ante. </p>
