--- a/public/test.html
+++ b/public/test.html
@@ -71,6 +71,24 @@
 				<main>
 					
 		<div class="test">
+			<section class="test__section preface" style="background-image: url(assets/images/test/back.jpg);" data-scroll-section>
+				<div class="container">
+					<div class="preface__holder">
+						<h1 class="preface__title">Болезнь крона <br> и язвенный колит</h1>
+						<div class="preface__subtitle">Воспалительные заболевания кишечника ВЗК</div>
+						<div class="preface__caption">
+							<div class="preface__caption__border">
+								<i></i><i></i>
+							</div>
+							<b>Более 5 млн людей</b>
+							страдают в мире от взк
+						</div>
+						<div class="preface__btn">
+							<a class="button button_size_xs" href="/vzk/"><span class="button__inner">ПОДРОБНЕЕ</span></a>
+						</div>
+					</div>
+				</div>
+			</section>
 			<section class="test__section test__section_1" data-scroll-section>
 				<canvas id="canvas" class="test__canvas"></canvas>
 				<div class="container">
@@ -340,19 +358,15 @@
 			<section class="test__section test__section_2" data-scroll-section>
 				<div class="container">
 					<div class="test__holder">
-						<div class="row">
-							<div class="col-md-5">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a justo aliquet, vulputate ligula at, placerat est. Aenean in orci accumsan, commodo ante a, sodales nibh. Phasellus venenatis eu ipsum non lobortis. Donec vehicula enim a venenatis lacinia. Maecenas et pharetra diam, et imperdiet ante. </p>
-								<p>Aliquam tempus consectetur dui a efficitur. Curabitur efficitur sem ac dignissim vulputate. In vel aliquam lorem. Etiam in nibh elementum, varius velit nec, vehicula purus. Class aptent taciti sociosqu ad </p>
+						<div class="slider">
+							<div class="slider__holder" id="slider">
+								<div class="slider__item" style="background-image: url('assets/images/test/3-xl.jpg');"></div>
+								<div class="slider__item" style="background-image: url('assets/images/test/3-xl.jpg');"></div>
+								<div class="slider__item" style="background-image: url('assets/images/test/3-xl.jpg');"></div>
 							</div>
-							<div class="col-md-6 offset-md-1">
-								<h2 class="test__title">About Us</h2>
-								<div class="test__img">
-									<img src="assets/images/landing/intro/3-xl.jpg" alt="">
-								</div>
-								<svg class="icon icon-social-youtube" width="20" height="20" role="presentation"><use href="assets/images/icons.svg#social-youtube" xlink:href="assets/images/icons.svg#social-youtube"></use></svg>
-							</div>
+							<div class="slider__nav"></div>
 						</div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a justo aliquet, vulputate ligula at, placerat est. Aenean in orci accumsan, commodo ante a, sodales nibh. Phasellus venenatis eu ipsum non lobortis. Donec vehicula enim a venenatis lacinia. Maecenas et pharetra diam, et imperdiet ante. </p>
 					</div>
 				</div>
 			</section>
@@ -363,7 +377,7 @@
 							<div class="col-md-5">
 								<h2 class="test__title">Services</h2>
 								<div class="test__img">
-									<img src="assets/images/landing/intro/3-xl.jpg" alt="">
+									<img src="assets/images/test/3-xl.jpg" alt="">
 								</div>
 								<svg class="icon icon-social-youtube" width="20" height="20" role="presentation"><use href="assets/images/icons.svg#social-youtube" xlink:href="assets/images/icons.svg#social-youtube"></use></svg>
 							</div>
@@ -386,7 +400,7 @@
 							<div class="col-md-6 offset-md-1">
 								<h2 class="test__title">Test</h2>
 								<div class="test__img">
-									<img src="assets/images/landing/intro/3-xl.jpg" alt="">
+									<img src="assets/images/test/3-xl.jpg" alt="">
 								</div>
 								<svg class="icon icon-social-youtube" width="20" height="20" role="presentation"><use href="assets/images/icons.svg#social-youtube" xlink:href="assets/images/icons.svg#social-youtube"></use></svg>
 							</div>
@@ -401,7 +415,7 @@
 							<div class="col-md-5">
 								<h2 class="test__title">Contact Us</h2>
 								<div class="test__img">
-									<img src="assets/images/landing/intro/3-xl.jpg" alt="">
+									<img src="assets/images/test/3-xl.jpg" alt="">
 								</div>
 								<svg class="icon icon-social-youtube" width="20" height="20" role="presentation"><use href="assets/images/icons.svg#social-youtube" xlink:href="assets/images/icons.svg#social-youtube"></use></svg>
 							</div>
@@ -460,7 +474,12 @@
 				
 		</div>
 	</div>
-	<script src="assets/javascripts/index.js"></script>
+	
+	
+    <script src="assets/javascripts/test.js"></script>
+
+
+	
 	
 </body>
 </html>
