--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
 </head>
 <body>
 	<div class="page-content-wrapper js-page-content-wrapper">
+		<div class="preloader">
+	<div class="preloader__loader"></div>
+</div>
 		
 			<header class="header header_sticky">
 	<div class="container">
