--- a/public/test.html
+++ b/public/test.html
@@ -98,7 +98,7 @@
 						<div class="row">
 							<div class="col-md-5">
 								<div class="test__img">
-									<img src="assets/images/landing/intro/3-xl.jpg" alt="">
+									<img src="assets/images/test/3-xl.jpg" alt="">
 								</div>
 							</div>
 							<div class="col-md-6 offset-md-1 test__content">
@@ -429,7 +429,6 @@
 					</div>
 				</div>
 			</section>
-		</div>
 
 				</main>
 				 
