--- a/public/page-list.html
+++ b/public/page-list.html
@@ -104,8 +104,8 @@
           <div class="container">
             <h1>Page list</h1>
             <ol>
-              <li><a href="/index.html">Landing page</a></li>
-              <li><a href="/test.html">Test page</a></li>
+              <li><a href="index.html">Landing page</a></li>
+              <li><a href="test.html">Test page</a></li>
             </ol>
           </div>
         </section>
