--- a/public/test.html
+++ b/public/test.html
@@ -408,11 +408,11 @@
                     <h2 class="test__title">Contact Us</h2>
                     <div class="test__img">
                       <picture>
-                        <source data-srcset="assets/images/test/5-xs.jpg 240w " media="(max-width: 576px)" />
-                        <source data-srcset="assets/images/test/5-sm.jpg 576w" media="(max-width: 768px)" />
-                        <source data-srcset="assets/images/test/5-md.jpg 768w" media="(max-width: 992px)" />
-                        <source data-srcset="assets/images/test/5-lg.jpg 992w" media="(max-width: 1200px)" />
-                        <source data-srcset="assets/images/test/5-xl.jpg 1200w" />
+                        <source srcset="assets/images/test/5-xs.jpg" data-srcset="assets/images/test/5-xs.jpg 240w " media="(max-width: 576px)" />
+                        <source srcset="assets/images/test/5-xs.jpg" data-srcset="assets/images/test/5-sm.jpg 576w" media="(max-width: 768px)" />
+                        <source srcset="assets/images/test/5-xs.jpg" data-srcset="assets/images/test/5-md.jpg 768w" media="(max-width: 992px)" />
+                        <source srcset="assets/images/test/5-xs.jpg" data-srcset="assets/images/test/5-lg.jpg 992w" media="(max-width: 1200px)" />
+                        <source srcset="assets/images/test/5-xs.jpg" data-srcset="assets/images/test/5-xl.jpg 1200w" />
                         <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="assets/images/test/5-sm.jpg" class="lazyload" alt="Section5" />
                       </picture>
                     </div>
